# Set the output file type
set terminal png
# Set the output file name
set output 'perf.png'

# Now plot the data with lines and points
plot 'io_data.txt' using 1:2 w lp title 'random read', \
     '' using 1:3 w lp title 'random write', \
     '' using 1:4 w lp title 'seq read', \
     '' using 1:5 w lp title 'seq write'
